--- a/style.css
+++ b/style.css
@@ -10,6 +10,53 @@
 h1 {
   color: #ffffff;
   font-family: 'Source Sans Pro', sans-serif;
-  font-weight: 400;
+  text-align: left;
+  font-weight: 200;
+  font-size: 3vh;
+  padding: 1.4vh 2vw;
+}
+
+nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  position: fixed;
+  top: 0%;
+  width: 100%;
+  height: 7vh;
+  background-color: rgba(5, 5, 5, 0.8);
+  -webkit-transition: background-color 0.25s ease-in-out;
+  transition: background-color 0.25s ease-in-out;
+}
+
+div.navbar {
+  height: 100%;
+}
+
+div a {
+  color: #ffffff;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 200;
+  width: 10vw;
+  height: 100%;
+  display: inline-block;
+  text-align: center;
+  font-size: 2vh;
+  padding: 2vh 0vw;
+}
+
+nav:not(.transparent) {
+  background-color: rgba(5, 5, 5, 0.8);
+}
+
+.transparent {
+  background-color: transparent;
 }
 /*# sourceMappingURL=style.css.map */
