--- a/style.scss
+++ b/style.scss
@@ -12,5 +12,44 @@ $text-color: #ffffff;
 h1{
     color: $text-color;
     font-family: 'Source Sans Pro', sans-serif;
-    font-weight: 400;
+    text-align: left;
+    font-weight: 200;
+    font-size: 3vh;
+    padding: 1.4vh 2vw;
+}
+
+h1 {}
+
+nav{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    position: fixed;
+    top: 0%;
+    width: 100%;
+    height: 7vh;
+    background-color: rgba($color: #050505, $alpha: 0.8);
+    transition: background-color 0.25s ease-in-out;
+}
+
+div.navbar {
+    height: 100%;;
+}
+
+div a{color: $text-color;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-weight: 200;
+    width: 10vw; 
+    height: 100%;
+    display: inline-block;
+    text-align: center;
+    font-size: 2vh;
+    padding: 2vh 0vw;}
+
+nav:not(.transparent) {
+    background-color: rgba(5, 5, 5, 0.8);
+}
+
+.transparent {
+    background-color: transparent;
 }
