--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@
           box-sizing: border-box;
 }
 
+body {
+  background-color: #090909;
+}
+
 h1 {
   color: #ffffff;
   font-family: 'Source Sans Pro', sans-serif;
@@ -40,11 +44,34 @@ div.navbar {
   height: 100%;
 }
 
+a {
+  text-decoration: none;
+  position: relative;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
+}
+
+a::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 5vh;
+  width: 0%;
+  height: 2px;
+  background-color: #ffffff;
+  -webkit-transition: width 0.15s ease-in-out;
+  transition: width 0.15s ease-in-out;
+}
+
+a:hover::after {
+  width: 100%;
+}
+
 div a {
   color: #ffffff;
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: 200;
-  width: 10vw;
+  width: 8vw;
   height: 100%;
   display: inline-block;
   text-align: center;
