git update test

--- a/style.css
+++ b/style.css
@@ -83,6 +83,17 @@ nav:not(.transparent) {
   background-color: rgba(5, 5, 5, 0.8);
 }
 
+footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  width: 50vw;
+}
+
 .transparent {
   background-color: transparent;
 }
