--- a/style.css
+++ b/style.css
@@ -49,6 +49,10 @@ a {
   position: relative;
   -webkit-box-sizing: content-box;
           box-sizing: content-box;
+  color: #ffffff;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 200;
+  font-size: 3vh;
 }
 
 a::after {
@@ -65,6 +69,10 @@ a::after {
 
 a:hover::after {
   width: 100%;
+}
+
+footer p {
+  font-size: 3vh;
 }
 
 div a {
