--- a/style.css
+++ b/style.css
@@ -16,8 +16,8 @@ h1 {
   font-family: 'Source Sans Pro', sans-serif;
   text-align: left;
   font-weight: 200;
-  font-size: 3vh;
-  padding: 1.4vh 2vw;
+  font-size: 2vw;
+  padding: 0.5vw 2vw;
 }
 
 nav {
@@ -34,32 +34,40 @@ nav {
   position: fixed;
   top: 0%;
   width: 100%;
-  height: 7vh;
+  height: 4vw;
   background-color: rgba(5, 5, 5, 0.8);
   -webkit-transition: background-color 0.25s ease-in-out;
   transition: background-color 0.25s ease-in-out;
+}
+
+a {
+  color: #ffffff;
+  font-family: 'Source Sans Pro', sans-serif;
+  text-decoration: none;
 }
 
 div.navbar {
   height: 100%;
 }
 
-a {
-  text-decoration: none;
+div.navbar a {
   position: relative;
   -webkit-box-sizing: content-box;
           box-sizing: content-box;
-  color: #ffffff;
-  font-family: 'Source Sans Pro', sans-serif;
+  display: inline-block;
+  text-align: center;
+  width: 8vw;
+  height: 100%;
   font-weight: 200;
-  font-size: 3vh;
+  font-size: 1.2vw;
+  padding: 1.2vw 0vw;
 }
 
 a::after {
   content: '';
   position: absolute;
   left: 0;
-  bottom: 4vh;
+  bottom: 2vw;
   width: 0%;
   height: 2px;
   background-color: #ffffff;
@@ -72,19 +80,11 @@ a:hover::after {
 }
 
 footer p {
-  font-size: 3vh;
+  font-size: 1vw;
 }
 
-div a {
-  color: #ffffff;
-  font-family: 'Source Sans Pro', sans-serif;
-  font-weight: 200;
-  width: 8vw;
-  height: 100%;
-  display: inline-block;
-  text-align: center;
-  font-size: 2vh;
-  padding: 2vh 0vw;
+footer a {
+  font-size: 1vw;
 }
 
 nav:not(.transparent) {
@@ -111,5 +111,35 @@ footer {
 
 .transparent {
   background-color: transparent;
+}
+
+iframe {
+  border: 0px;
+  border-radius: .25vh;
+}
+
+.video-grid {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  margin: 0px;
+}
+
+.video-cell {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  width: 50%;
+}
+
+.video-cell a {
+  display: block;
+  text-align: center;
+  color: #000;
+  text-decoration: none;
 }
 /*# sourceMappingURL=style.css.map */
