--- a/style.scss
+++ b/style.scss
@@ -18,8 +18,8 @@ h1{
     font-family: 'Source Sans Pro', sans-serif;
     text-align: left;
     font-weight: 200;
-    font-size: 3vh;
-    padding: 1.4vh 2vw;
+    font-size: 2vw;
+    padding: 0.5vw 2vw;
 }
 
 nav{
@@ -29,53 +29,56 @@ nav{
     position: fixed;
     top: 0%;
     width: 100%;
-    height: 7vh;
+    height: 4vw;
     background-color: rgba($color: #050505, $alpha: 0.8);
     transition: background-color 0.25s ease-in-out;
 }
 
-div.navbar {
-    height: 100%;;
-}
-
 a {
-    text-decoration: none;
-    position: relative;
-    box-sizing: content-box;
     color: $text-color;
     font-family: 'Source Sans Pro', sans-serif;
+    text-decoration: none;
+}
+
+div.navbar {
+    height: 100%;
+}
+
+div.navbar a {
+    position: relative;
+    box-sizing: content-box;
+    display: inline-block;
+    text-align: center;
+    width: 8vw; 
+    height: 100%;
     font-weight: 200;
-    font-size: 3vh;
+    font-size: 1.2vw;
+    padding: 1.2vw 0vw;
   }
   
-  a::after {
+a::after {
     content: '';
     position: absolute;
     left: 0;
-    bottom: 4vh;
+    bottom: 2vw;
     width: 0%;
     height: 2px;
     background-color: $text-color;
     transition: width 0.15s ease-in-out;
-  }
+}
   
-  a:hover::after {
+a:hover::after {
     width: 100%;
-  }
+}
 
 footer p{
-    font-size: 3vh;
+    font-size: 1vw;
 }  
 
-div a{color: $text-color;
-    font-family: 'Source Sans Pro', sans-serif;
-    font-weight: 200;
-    width: 8vw; 
-    height: 100%;
-    display: inline-block;
-    text-align: center;
-    font-size: 2vh;
-    padding: 2vh 0vw;}
+footer a{
+    font-size: 1vw;
+
+}
 
 nav:not(.transparent) {
     background-color: rgba(5, 5, 5, 0.8);
@@ -95,3 +98,28 @@ footer {
 .transparent {
     background-color: transparent;
 }
+
+iframe {
+    border: 0px;
+    border-radius: .25vh;
+}
+
+//Youtube Nonsense
+.video-grid {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    margin: 0px;
+  }
+  
+  .video-cell {
+    box-sizing: border-box;
+    width: 50%;
+  }
+  
+  .video-cell a {
+    display: block;
+    text-align: center;
+    color: #000;
+    text-decoration: none;
+  }
