--- a/style.css
+++ b/style.css
@@ -106,6 +106,8 @@ footer a {
 
 nav:not(.transparent) {
   background-color: rgba(5, 5, 5, 0.8);
+  -webkit-backdrop-filter: blur(16px);
+          backdrop-filter: blur(16px);
 }
 
 footer {
