--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ h1 {
   font-size: 3vw;
 }
 
-p {
+body p {
   color: #ffffff;
   font-weight: 200;
   font-size: 1.6vw;
@@ -96,11 +96,12 @@ div.navbar a:hover::after {
 footer p {
   font-size: 1vw;
   color: #a0a0a0;
+  padding: 0px 0px;
 }
 
 footer a {
   font-size: 1vw;
-  width: 8vw;
+  width: 2vw;
   color: #a0a0a0;
 }
 
@@ -119,9 +120,8 @@ footer {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   text-align: center;
   -webkit-box-sizing: content-box;
           box-sizing: content-box;
