--- a/style.css
+++ b/style.css
@@ -11,13 +11,13 @@
 h1 {
   color: #ffffff;
   font-weight: 200;
-  font-size: 3vw;
+  font-size: 5vh;
 }
 
 body p {
   color: #ffffff;
   font-weight: 200;
-  font-size: 1.6vw;
+  font-size: 2vh;
 }
 
 body {
@@ -29,8 +29,8 @@ nav h1 {
   font-family: 'Source Sans Pro', sans-serif;
   text-align: left;
   font-weight: 200;
-  font-size: 2vw;
-  padding: 0.5vw 2vw;
+  font-size: 3vh;
+  padding: .75vh 3vh;
 }
 
 nav {
@@ -47,8 +47,7 @@ nav {
   position: fixed;
   top: 0%;
   width: 100%;
-  height: 4vw;
-  background-color: rgba(5, 5, 5, 0.8);
+  height: 6vh;
   -webkit-transition: background-color 0.25s ease-in-out;
   transition: background-color 0.25s ease-in-out;
 }
@@ -72,19 +71,20 @@ div.navbar a {
   width: 8vw;
   height: 100%;
   font-weight: 200;
-  font-size: 1.2vw;
+  font-size: 2vh;
+  padding: 1.5vh 0px 0.6vh;
 }
 
 div.navbar a::after {
   content: '';
   position: absolute;
   left: 0;
-  bottom: 2.4vw;
+  bottom: 2vh;
   width: 0%;
   height: 2px;
   background-color: #ffffff;
-  -webkit-transition: width 0.15s ease-in-out;
-  transition: width 0.15s ease-in-out;
+  -webkit-transition: width 0.25s ease-in-out;
+  transition: width 0.25s ease-in-out;
 }
 
 div.navbar a:hover::after {
@@ -92,21 +92,20 @@ div.navbar a:hover::after {
 }
 
 footer p {
-  font-size: 1vw;
+  font-size: 2vh;
   color: #a0a0a0;
   padding: 0px 0px;
 }
 
 footer a {
-  font-size: 1vw;
+  font-size: 2vh;
   width: 2vw;
   color: #a0a0a0;
 }
 
-nav:not(.transparent) {
-  background-color: rgba(5, 5, 5, 0.8);
-  -webkit-backdrop-filter: blur(16px);
-          backdrop-filter: blur(16px);
+nav.transparent {
+  -webkit-backdrop-filter: blur(64px);
+          backdrop-filter: blur(64px);
 }
 
 footer {
@@ -130,45 +129,6 @@ footer {
 
 .transparent {
   background-color: transparent;
-}
-
-iframe {
-  border-radius: .5vh;
-  -webkit-box-sizing: content-box;
-          box-sizing: content-box;
-  padding: 2vw 0vw;
-}
-
-#video-grid {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  width: 100vw;
-  padding: 0vw 2vw;
-}
-
-.video-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  width: 100%;
 }
 
 @media only screen and (max-width: 600px) {
