--- a/style.scss
+++ b/style.scss
@@ -14,13 +14,13 @@ $subheader-color: #a0a0a0;
 h1 {
     color: $text-color;
     font-weight: 200;
-    font-size: 3vw;
+    font-size: 5vh;
 }
 
 body p {
     color: $text-color;
     font-weight: 200;
-    font-size: 1.6vw;
+    font-size: 2vh;
 }
 
 body {
@@ -32,8 +32,8 @@ nav h1{
     font-family: 'Source Sans Pro', sans-serif;
     text-align: left;
     font-weight: 200;
-    font-size: 2vw;
-    padding: 0.5vw 2vw;
+    font-size: 3vh;
+    padding: .75vh 3vh;
 }
 
 nav{
@@ -43,8 +43,8 @@ nav{
     position: fixed;
     top: 0%;
     width: 100%;
-    height: 4vw;
-    background-color: rgba($color: #050505, $alpha: 0.8);
+    height: 6vh;
+    //background-color: rgba($color: #050505, $alpha: 0.8);
     transition: background-color 0.25s ease-in-out;
 }
 
@@ -66,18 +66,19 @@ div.navbar a {
     width: 8vw; 
     height: 100%;
     font-weight: 200;
-    font-size: 1.2vw;
+    font-size: 2vh;
+    padding: 1.5vh 0px 0.6vh;
   }
   
 div.navbar a::after {
     content: '';
     position: absolute;
     left: 0;
-    bottom: 2.4vw;
+    bottom: 2vh;
     width: 0%;
     height: 2px;
     background-color: $text-color;
-    transition: width 0.15s ease-in-out;
+    transition: width 0.25s ease-in-out;
 }
   
 div.navbar a:hover::after {
@@ -85,21 +86,21 @@ div.navbar a:hover::after {
 }
 
 footer p{
-    font-size: 1vw;
+    font-size: 2vh;
     color: $subheader-color;
     padding: 0px 0px;
 }  
 
 footer a{
-    font-size: 1vw;
+    font-size: 2vh;
     width: 2vw;
     color: $subheader-color;
 
 }
 
-nav:not(.transparent) {
-    background-color: rgba(5, 5, 5, 0.8);
-    backdrop-filter: blur(16px);
+nav.transparent {
+    //background-color: rgba(5, 5, 5, 0.8);
+    backdrop-filter: blur(64px);
 }
 
 footer {
@@ -116,30 +117,6 @@ footer {
 
 .transparent {
     background-color: transparent;
-}
-
-iframe {
-    border-radius: .5vh;
-    box-sizing: content-box;
-    padding: 2vw 0vw;
-}
-
-//Youtube Nonsense
-#video-grid {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: flex-start;
-    width: 100vw;
-    padding: 0vw 2vw;
-}
-
-.video-container {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    width: 100%;
 }
 
 @media only screen and (max-width: 600px) {
