--- a/style.scss
+++ b/style.scss
@@ -45,7 +45,13 @@ nav{
     width: 100%;
     height: 6vh;
     //background-color: rgba($color: #050505, $alpha: 0.8);
-    transition: background-color 0.25s ease-in-out;
+    transition: 0.25s ease;
+}
+
+nav:not(.transparent) {
+    //background-color: rgba(5, 5, 5, 0.8);
+    backdrop-filter: blur(64px);
+    transition: 0.25s ease;
 }
 
 a {
@@ -96,11 +102,6 @@ footer a{
     width: 2vw;
     color: $subheader-color;
 
-}
-
-nav:not(.transparent) {
-    //background-color: rgba(5, 5, 5, 0.8);
-    backdrop-filter: blur(64px);
 }
 
 footer {
